infra/istio/resilience/order-service-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service-routing
  namespace: ecommerce
spec:
  hosts:
  - order-service.ecommerce.svc.cluster.local
  http:
  - route:
    - destination:
        host: order-service.ecommerce.svc.cluster.local
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: connect-failure,refused-stream,503
      retryRemoteLocalities: true
